# bitlbee

./: .bzrignore  .gdbinit  .gitignore  .travis.yml  .vimrc  Makefile  README.md  account.c  account.h  auth.c  auth.h  auth_ldap.c  auth_pam.c  bitlbee.c  bitlbee.conf  bitlbee.h  chat.c  chat.h  commands.c  commands.h  conf.c  conf.h  configure  crypting.c  crypting.h  dcc.c  dcc.h  debug.c  debug.h  help.c  help.h  ini.c  ini.h  install.bash  ipc.c  ipc.h  irc.c  irc.h  irc_cap.c  irc_channel.c  (+35 more)
.github/workflows/: ci.yml  coverity.yaml  test.yaml
.tests/: btlib.py  cleanup_bitlbee.sh  cleanup_bitlbee_leakage_ok.sh  cleanup_prosody.sh  gcovflags  help.py  identify.py  identify_nonexist.py  jabber_add_buddy.py  jabber_block_buddy.py  jabber_connect.py  jabber_default_target.py  jabber_delete_acc.py  jabber_offline.py  jabber_remove_buddy.py  jabber_rename_buddy.py  jabber_status.py  register.py  setup.sh  setup_bitlbee.sh  setup_prosody.sh  talk_to_bitlbee.py  test1.py  unregister.py
debian/: NEWS  README.Debian  bitlbee-common.bitlbee.upstart  bitlbee-common.config  bitlbee-common.docs  bitlbee-common.examples  bitlbee-common.init  bitlbee-common.postinst  bitlbee-common.postrm  bitlbee-common.preinst  bitlbee-common.prerm  bitlbee-common.templates  bitlbee-dev.postinst  bitlbee-libpurple.lintian-overrides  bitlbee-plugin-skype.docs  bitlbee.config  bitlbee.init  bitlbee.lintian-overrides  bitlbee.postinst  bitlbee.postrm  bitlbee.preinst  bitlbee.prerm  bitlbee.templates  changelog  conffiles  config  control  copyright  lintian-brush.conf  motd.txt  postinst  postrm  prerm  rules  skyped.README.Debian  watch
debian/patches/: 0001-bitlbee.conf.patch  bitlbee.conf.diff  series
debian/po/: POTFILES.in  cs.po  da.po  de.po  es.po  fr.po  it.po  ja.po  nl.po  pt.po  pt_BR.po  ru.po  sv.po  templates.pot  vi.po
debian/source/: options
debian/upstream/: metadata
doc/: AUTHORS  BUILD.win32  CHANGES  CREDITS  FAQ  HACKING  Makefile  README  RELEASE-SPEECH-1.2  TODO  bitlbee.8  bitlbee.conf.5  bitlbee.schema  bitlbee.xinetd  bitlbee_schema.sql  example_plugin.c  git-bzr-rev-map  uncrustify.cfg
doc/user-guide/: Installation.xml  Makefile  Support.xml  Usage.xml  commands.xml  docbook.xsl  genhelp.py  help.txt  help.xml  help.xsl  mastodon.xml  misc.xml  quickstart.xml  twitter.xml  user-guide.html  user-guide.txt  user-guide.xml
init/: bitlbee.service.in  bitlbee.socket  bitlbee.sysusers  bitlbee@.service.in
lib/: Makefile  arc.c  arc.h  base64.c  base64.h  canohost.c  canohost.h  des.c  des.h  events.h  events_glib.c  events_libevent.c  ftutil.c  ftutil.h  http_client.c  http_client.h  ini.c  ini.h  json.c  json.h  json_util.c  json_util.h  md5.c  md5.h  misc.c  misc.h  ns_parse.c  oauth.c  oauth.h  oauth2.c  oauth2.h  parson.c  parson.h  password.c  password.h  proxy.c  proxy.h  rc4.c  rc4.h  sha1.c  (+11 more)
protocols/: Makefile  account.c  account.h  bee.c  bee.h  bee_chat.c  bee_ft.c  bee_user.c  events.h  events_glib.c  events_libevent.c  ft.h  http_client.c  http_client.h  nogaim.c  nogaim.h  proxy.c  proxy.h  sha.c  sha.h  ssl_bogus.c  ssl_client.h  ssl_gnutls.c  ssl_nss.c  ssl_openssl.c  ssl_sspi.c  unknown.c  user.c  user.h  util.c
protocols/jabber/: Makefile  block.c  conference.c  expat.c  hashtable.c  hipchat.c  io.c  iq.c  jabber.c  jabber.h  jabber_util.c  jid.c  jpacket.c  jutil.c  lib.h  libxode.h  log.c  log.h  message.c  pool.c  presence.c  s5bytestream.c  sasl.c  si.c  str.c  stream.c  xmldef.h  xmlnode.c  xmlparse.c  xmlparse.h  xmlrole.c  xmltok.c  xmltok_impl.c  xmltok_ns.c  xmltree.c  xmltree.h
protocols/mastodon/: Makefile  TODO.md  mastodon.c  mastodon.h  mastodon_http.c  mastodon_http.h  mastodon_lib.c  mastodon_lib.h
protocols/msn/: Makefile  gw.c  invitation.c  invitation.h  msn.c  msn.h  msn_util.c  ns.c  passport.c  passport.h  sb.c  soap.c  soap.h  tables.c
protocols/oscar/: AUTHORS  Makefile  admin.c  admin.h  aim.h  aim_internal.h  aim_prefixes.h  auth.c  bos.c  bos.h  buddylist.c  buddylist.h  chat.c  chat.h  chatnav.c  chatnav.h  conn.c  ft.c  ft.h  icq.c  icq.h  im.c  im.h  info.c  info.h  misc.c  msgcookie.c  oscar.c  oscar_util.c  rxhandlers.c  rxqueue.c  search.c  search.h  service.c  snac.c  ssi.c  ssi.h  stats.c  tlv.c  txqueue.c
protocols/purple/: Makefile  bpurple.h  ft-direct.c  ft.c  purple.c
protocols/python/: Makefile.in  README.md  bootstrap.sh  config.mak.in  configure.ac
protocols/python/examples/: sampleplugin.py
protocols/python/src/: bpython.c
protocols/rpc/: Makefile  rpc.c
protocols/skype/: .mailmap  HACKING  Makefile  README  asciidoc.conf  client.sh  config.mak.in  skype.c  skyped.1  skyped.cnf  skyped.py  skyped.txt  test.py
protocols/twitter/: Makefile  twitter.c  twitter.h  twitter_http.c  twitter_http.h  twitter_lib.c  twitter_lib.h
protocols/yahoo/: Makefile  crypt.c  libyahoo2.c  yahoo.c  yahoo2.h  yahoo2_callbacks.h  yahoo2_types.h  yahoo_debug.h  yahoo_fn.c  yahoo_fn.h  yahoo_httplib.c  yahoo_httplib.h  (+4 more)
python/: implugin.py  newsblur.py  wa.py
skype/: .gitignore  HACKING  Makefile  NEWS  README  bitlbeed.py  client.c  client.py  config.mak.in  configure.ac  images  skype.c  skyped.conf.dist  skyped.conf.dist.in  skyped.py
skype/t/: Makefile  livetest-bitlbee.sh
skype/t/irssi/: livetest-irssi.sh  skype-info.test  skype-login.test  skype-msg.test
tests/: Makefile  check.c  check_arc.c  check_crypting.c  check_help.c  check_irc.c  check_jabber_sasl.c  check_jabber_util.c  check_md5.c  check_nick.c  check_set.c  check_user.c  check_util.c  test_srv_lookup.c  testsuite.h
utils/: README  bitlbee-ctl.pl  bitlbeed.c  centericq2bitlbee.sh  convert_gnomeicu.txt  convert_purple.py  create_nicksfile.pl  cross-compile.win32
win32/: BUILD.TXT  MainDlg.cpp  MainDlg.h  PropAccess.cpp  PropAccess.h  PropConn.cpp  PropConn.h  PropLog.cpp  PropLog.h  PropPaths.cpp  PropPaths.h  PropUsers.cpp  PropUsers.h  TrayNot.cpp  TrayNot.h  bitlbee.dsp  bitlbee.dsw  bitlbee.iss  bitlbee.rc  bitlbee_ssl.dsp  bitlbeewin.cpp  bitlbeewin.h  configure.mingw32  jabber.dsp  msn.dsp  oscar.dsp  resource.h  yahoo.dsp
(+63 files in other folders)
